Use Maven to compile code customization